# the_data_analyst

./: .env.example  LICENSE  README.md  index.html
backend/: pyproject.toml
backend/src/backend/: client_analysis_app.py  examples.py  greenhouse_app.py  greenhouse_emissions_app.py  main.py  prompt_injection.py  requirements.txt.py  setup.py
backend/src/backend/agents/: __init__.py  code_agent.py  orchestrator.py  query_analyzer.py  report_generator.py
backend/src/backend/agents/orchestrator/: __init__.py  orchestrator.py  system_prompt.py
backend/src/backend/agents/query_analyzer/: query_analyzer.py
backend/src/backend/agents/report_generator/: __init__.py  report_generator.py  system_prompt.py
backend/src/backend/tools/: __init__.py  google_search.py  jina_rerank.py  mongodb_tool.py  postgre_tool.py  python_file.py  python_tools.py  save_python_file.py  serper_scrape.py  streamlit_dashboard_generator.py  streamlit_runner.py
backend/tests/: test_system_prompt.py
databases/: README.md  queries_on_consulting_database.json
databases/consulting_database/client1/: sales.csv
databases/consulting_database/client2/: client_list.csv  sales_client2.csv
databases/consulting_database/global_information/: API_NOR_DS2_en_csv_v2_16791.csv  Metadata_Indicator_API_NOR_DS2_en_csv_v2_16791.csv
