[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.45.2",
    "litellm>=1.61.6",
    "pip>=25.0.1",
    "plotly>=6.0.0",
    "smolagents[e2b,gardio,gradio]>=1.9.2",
    "streamlit>=1.42.0",
    "pymongo[srv]>=4.11.1",
]
